--- a/style.css
+++ b/style.css
@@ -2,7 +2,18 @@
         margin: 0;
         box-sizing: border-box;
         font-family: "Roboto",sans-serif;
-    }
+        list-style-type: none;
+      }
+
+      #resume{
+        
+        padding: 10px;
+        background-color: rgba(127, 255, 212, 0.463);
+        margin-right: 10px;
+        margin-left: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
       #resume{
         color: olive;
         font-weight: bolder;
@@ -10,6 +21,10 @@
        .heading{
         color: blueviolet;
         font-style: italic;
+        text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.276);
+        font-family: "Roboto", sans-serif;
+
+
       }
       #experience{
         font-weight: bolder;
@@ -17,12 +32,14 @@
       .tech{
         color: aqua;
       }
-      .a{
+      /* .a{
         text-decoration: none;
         color: rgb(1, 14, 9);
         margin: 20px 20px 20px 20px;
         padding: 10px;
-      }
+        font-family: "Roboto", sans-serif;
+
+      } */
       .header-info{
         padding: 10px;
         background-color: rgba(127, 255, 212, 0.463);
@@ -40,3 +57,29 @@
         margin-top: 10px;
         margin-bottom: 10px;
       }
+      #navsection li{
+       display: inline;
+       margin-right:30px;
+      }
+      table,tr,th,td{
+        border: 2px solid rgb(216,186,131);
+        border-collapse: collapse;
+      }
+      #techtable{
+        width: 50%;
+      }
+      #listsummary,#copyright{
+        font-family: "Poppins",sans-serif;
+      }
+      #listsummary li{
+        list-style-type: circle;
+      }
+      .roles{
+        list-style-type:lower-alpha ;
+        
+      }
+      .roles li{
+        padding-top: 7px;
+
+      }  
+
